k8s/nebula/apps/dev/coder/app/internal-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    meta.helm.sh/release-name: coder
    meta.helm.sh/release-namespace: dev
  labels:
    app.kubernetes.io/instance: coder
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: coder
    app.kubernetes.io/part-of: coder
    app.kubernetes.io/version: 2.5.1
    helm.sh/chart: coder-2.5.1
    helm.toolkit.fluxcd.io/name: coder
    helm.toolkit.fluxcd.io/namespace: dev
  name: coder-int
  namespace: dev
spec:
  ingressClassName: internal-nginx
  rules:
    - host: coder.skylab.fi
      http:
        paths:
          - backend:
              service:
                name: coder
                port:
                  name: http
            path: /
            pathType: Prefix
